<resources>
    <string name="app_name">InClass08</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_forum_title">Forum Title</string>
    <string name="enter_forum_des">Forum Description</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="fullname">Full Name</string>
    <string name="post_comment">Post</string>
    <string name="enter_comment">Write Comment</string>
    <string name="submit_new_forum">Submit</string>
    <string name="cancel_new_forum">Cancel</string>
    <string name="logout_button">Logout</string>
    <string name="go_to_new_forum">New Forum</string>
    <string name="button_login">Login</string>
    <string name="button_create_acc">Create New Account</string>
    <string name="button_reg_new_acc">Submit</string>
    <string name="cancel_new_acc">Cancel</string>
</resources>